# mnist_prelabelling

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  PIPELINE.md  RESULTS.md
results/: evaluate_prelabelling_best_run.json
src/mnist_prelabelling/: config.py  pipeline.py
src/mnist_prelabelling/analysis/: evaluate_detection_strategies.py  iterative_correction_experiment.py
src/mnist_prelabelling/clustering/: assign_labels.py  cluster_embeddings.py  correct_labels.py  detect_label_errors.py  visualize_embeddings.py
src/mnist_prelabelling/embeddings/: extractor.py
src/mnist_prelabelling/evaluation/: evaluate_prelabelling.py
src/mnist_prelabelling/models/: custom_cnn.py
src/mnist_prelabelling/training/: generate_pool_embeddings.py  retrain_on_pool_labels.py  train.py  train_seed_classifier.py
src/mnist_prelabelling/utils/: run_logger.py
