[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-prelabelling"
version = "0.1.0"
description = "Unsupervised pre-labelling of MNIST training data using a small labeled seed set"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mnist-prelabelling = "mnist_prelabelling.pipeline:main"